--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "DemonMusicBot",
+    "name": "AzesongBot",
     "description": "Azərbaycan dilində song botu.",
     "logo": "https://telegra.ph/file/50694e1b2a639f38c6dfd.jpg",
     "keywords": [
-        "Demon",
-        "Music",
+        "Aze",
+        "Song",
         "Bot"
     ],
-    "repository": "https://github.com/ByFragment/DemonMusic-Demo-",
-    "success_url": "https://github.com/ByFragment/DemonMusic-Demo-",
+    "repository": "https://github.com/PornoHup/riyadd",
+    "success_url": "https://github.com/pornoHup/riyadd",
     "image": "heroku/python",
     "formation": {
         "worker": {
